tests/fixtures/valid/inline_dag_include_cross_file_self_import/src/lib/main.gcl
include lib.lib.scale_earth(factor: 0.5).{ result as earth_half };

node out: Length = @earth_half;
