tests/fixtures/invalid/multi/bare_type_import_collision/src/academy/lib.gcl
pub type Student {
    Student(mass: Mass),
}

pub const node Student: Dimensionless = 1.0;
